Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16896

sanity-flr test_70a: lfs mirror verify: chunk [0, 0x100000) has different checksum value on mirror <n> and mirror <m>

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for bobijam <bobijam@hotmail.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/7e88bd04-8d1f-4f34-96cc-99bca0f7b47a

      test_70a failed with the following error:

      fsx FLR file /mnt/lustre/d70a.sanity-flr/f70a.sanity-flr failed
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-b_es-reviews/11663 - 3.10.0-1160.88.1.el7.x86_64
      servers: https://build.whamcloud.com/job/lustre-b_es-reviews/11663 - 3.10.0-1160.88.1.el7_lustre.ddn17.x86_64

      <<Please provide additional information about the failure here>>

      lfs mirror verify: chunk [0, 0x100000) has different checksum value on mirror 1 and mirror 9.
      lfs mirror verify: chunk [0, 0x100000) has different checksum value on mirror 1 and mirror 10.
      lfs mirror verify: chunk [0, 0x100000) has different checksum value on mirror 1 and mirror 11.
      lfs mirror verify: chunk [0, 0x100000) has different checksum value on mirror 1 and mirror 12.
      lfs mirror verify /mnt/lustre/d70a.sanity-flr/f70a.sanity-flr: 22
      CRC-32 checksum value for chunk [0, 0x400000):
      Mirror 1: 0xe1dd0e93
      Mirror 8: 0xe1dd0e93
      Mirror 9: 0xe1dd0e93
      Mirror 10: 0xe1dd0e93
      Mirror 11: 0xe1dd0e93
      Mirror 12: 0xe1dd0e93

      another run: https://testing.whamcloud.com/test_sets/08a96162-2365-4e4d-b565-a2b82ca3e8f7

      lfs mirror verify: chunk [0, 0x100000) has different checksum value on mirror 1 and mirror 4.
      lfs mirror verify: chunk [0, 0x100000) has different checksum value on mirror 1 and mirror 6.
      lfs mirror verify /mnt/lustre/d70a.sanity-flr/f70a.sanity-flr: 22
      CRC-32 checksum value for chunk [0, 0x400000):
      Mirror 1: 0xd9cbfb8d
      Mirror 2: 0xd9cbfb8d
      Mirror 4: 0xd9cbfb8d
      Mirror 6: 0xd9cbfb8d

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      sanity-flr test_70a - fsx FLR file /mnt/lustre/d70a.sanity-flr/f70a.sanity-flr failed

            bobijam Zhenyu Xu
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: